[project]
name = "j"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "gradio-client>=1.8.0",
    "loguru>=0.7.3",
    "openai>=1.74.0",
    "pillow>=11.2.1",
    "polars>=1.27.1",
    "scipy>=1.15.2",
    "tenacity>=9.1.2",
    "uvicorn>=0.34.1",
]
